Updating style and index to look more like a real life project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Make me into a grid!</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <script src="https://kit.fontawesome.com/4ca032af7b.js" crossorigin="anonymous"></script>
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
@@ -15,23 +15,38 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-       
+       <section class="top-section">
+           <h1>Hi. I'm Heather.</h1>
+           <p>I am a <span>Web Developer, Visual Designer, and Writer</span> with a passion for storytelling in visual and narrative formats. I've been building websites since 1997 and taking clients since 2002. While my development expertise lies in HTML and CSS, I also works with JavaScript, jQuery, Ruby, and Rails.</p>
+       </section>
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p>When I'm not developing, designing, or writing, I can be found cooking with my nephews, listening to technology or HP Lovecraft centric podcasts, or scrolling through Netflix trying to decide what to watch.</p> 
             </div>
             <div class="div-2">
-                Div 2
+                
+                <ul>
+                    <li><a href="https://www.hjrandolph.me" target="_blank">hjrandolph.me</a></li>
+                    <li><a href="https://www.ksrcarpentry.com/" target="_blank">ksrcarpentry.com</a></li>
+                    <li><a href="http://www.allweatherpaws.com/" target="_blank">allweatherpaws.com</a></li>
+                    <li><a href="https://robertosbornerealestate.com/" target="_blank">robertosbornerealestate.com</a></li>
+                </ul> 
             </div>
             <div class="div-3">
-                Div 3
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore quas reprehenderit dicta voluptates deserunt? Cupiditate facere adipisci facilis! Ipsa perferendis culpa libero nihil ea et.</p> 
             </div>
         </section>    
+
+        <footer>
+            <p><i class="fab fa-twitter"></i></p> <p><i class="fab fa-instagram"></i></p> <p><i class="fab fa-tumblr"></i></p>
+        </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
