Updating layout to use flexbox for all layout items

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <div class="container">
        <section class="top-section">
            <h1>Hi. I'm Heather.</h1>
            <p>I am a <span>Web Developer, Visual Designer, and Writer</span> with a passion for storytelling in visual and narrative formats. I've been building websites since 1997 and taking clients since 2002. While my development expertise lies in HTML and CSS, I also works with JavaScript, jQuery, Ruby, and Rails.</p>
@@ -47,7 +48,7 @@
         <footer>
             <p><i class="fab fa-twitter"></i></p> <p><i class="fab fa-instagram"></i></p> <p><i class="fab fa-tumblr"></i></p>
         </footer>
-
+    </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
